--- a/view/css/estilo.css
+++ b/view/css/estilo.css
@@ -16,9 +16,9 @@
 
 /* escopo geral e estrutural */
 
-body{ padding:0px; margin:0px;font-family: 'Open Sans', sans-serif; color:#4E4E4E; overflow:hidden;background-color:#FFFFFF; }
+body{ padding:0px; margin:0px;font-family: 'Open Sans', sans-serif; color:#4E4E4E; overflow:hidden;background-color:#FFFFFF; overflow-y: auto; }
 h3{ font-weight:300; }
-.menu  {  background-color:#464646; font-size:14px; width:130px;  height:1000px; float:left; padding-top:100px;  }
+.menu  {  background-color:#464646; font-size:14px; width:130px;  height: 164vh; float:left; padding-top:100px;  }
 .menu ul{ padding:0px; margin:0px; }
 .menu li {  padding:15px; margin:0px; color:#FFFFFF;  list-style:none;  transition: background-color 0.5s ease, color 0.5s ease;  background-color:#575757; cursor:pointer; }
 .menu li:hover { background-color:#D4D4D4; }
@@ -37,9 +37,9 @@ select{ width:100% ; height:55px; border:none; }
 .tabelarow { overflow:auto; overflow-x:hidden;}
 table{ table-layout:fixed; padding:0px; margin:0px; width:100%; border:0px; font-size:12px; line-height:40px; border-collapse:collapse;  }
 table th{ border-bottom:1px solid #E6E6E6; max-width:200px; }
-table th:nth-child(1){  width:80px; font-size:14px; }
+ table th:nth-child(1){   font-size:14px; } /*width:70px; */
 table td{ border-bottom: solid 1px #E6E6E6; }
-table td:nth-child(1){  font-size:14px; font-weight:bold; width:80px; }
+table td:nth-child(1){  font-size:14px; font-weight:bold;  }/*  width:70px; */
 hr { border:none; border-bottom:dashed 1px #E6E6E6; }
 
 .lista_comum , .tabela_comum { width:70%; }
@@ -61,10 +61,15 @@ hr { border:none; border-bottom:dashed 1px #E6E6E6; }
 .reservado hr, .cancelado hr, .confirmado hr{ border:none; }
 .disponivel:hover { background-color:#DFDFDF; cursor:pointer; }
 
-.show{
-    display: block;
+.calendar{
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 150vh;
 }
 
-.ocultar{
-    display: none;
+.tituloSala{
+    width: 500px;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: bold;
 }
